[package]
name = "alicia_server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
deku = "0.19.1"
pretty-hex = "0.4.1"
tokio = { version = "1", features = ["full"] }
postgresql_embedded = { version = "0.18.5", features = ["tokio"] }
tokio-postgres = "0.7.13"
postgres-from-row = "0.5.2"
deadpool-postgres = "0.14.1"
deadpool = "0.12.2"
